[package]
name = "kyoko-curation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
reqwasm = "0.5"
rss = "2.0"
wasm-bindgen-futures = "0.4"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
scraper = "0.13"
